[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/main_viewport/3d_panel/body_panel.gd" type="Script" id=1]

[node name="BodyPanel" type="AspectRatioContainer"]
margin_right = 62.0
margin_bottom = 118.0
rect_min_size = Vector2( 64, 128 )
size_flags_vertical = 3
ratio = 0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 64.0
margin_bottom = 128.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="Button" parent="Control"]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 0.25
rect_pivot_offset = Vector2( 16, 16 )
toggle_mode = true

[node name="Body" type="Button" parent="Control"]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.625
rect_pivot_offset = Vector2( 16, 24 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ArmL" type="Button" parent="Control"]
anchor_left = 0.75
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.625
rect_pivot_offset = Vector2( 8, 24 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ArmR" type="Button" parent="Control"]
anchor_top = 0.25
anchor_right = 0.25
anchor_bottom = 0.625
rect_pivot_offset = Vector2( 8, 24 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LegL" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.625
anchor_right = 0.75
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 8, 24 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LegR" type="Button" parent="Control"]
anchor_left = 0.25
anchor_top = 0.625
anchor_right = 0.5
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 8, 24 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="toggled" from="Control/Head" to="." method="_on_Head_toggled"]
[connection signal="toggled" from="Control/Body" to="." method="_on_Body_toggled"]
[connection signal="toggled" from="Control/ArmL" to="." method="_on_ArmL_toggled"]
[connection signal="toggled" from="Control/ArmR" to="." method="_on_ArmR_toggled"]
[connection signal="toggled" from="Control/LegL" to="." method="_on_LegL_toggled"]
[connection signal="toggled" from="Control/LegR" to="." method="_on_LegR_toggled"]
